syntax = "proto3";
option go_package = "github.com/valyankilyan/sandbox-market-bot/api/front";

package api;

import "google/protobuf/empty.proto";

message UserTgId {
    int64 TgId = 1;
}

message TinkoffToken {
    int64 UserTgId = 1;
    string TinkoffToken = 2;
}

message MoneyValue {
    int64 Units = 1;
    int32 Nano = 2;
}

message PayinRequest {
    UserTgId TgId = 1;
    MoneyValue MoneyValue = 2;
}

service UsersService {
    rpc UpdateTinkoffToken(TinkoffToken) returns (google.protobuf.Empty);
    rpc PayIn(PayinRequest) returns (google.protobuf.Empty);
}