syntax = "proto3";
option go_package = "github.com/valyankilyan/sandbox-market-bot/api/myinvest";

package myinvest_api;

import "google/protobuf/empty.proto";
import "api/myinvest/account.proto";

message CurrencyRequest {
    repeated string ShortName = 1;
}

message Currency {
    string ShortName = 1;
    string Name = 2;
    MoneyValue Price = 3;
    int32 Lot = 4;
}

message CurrencyList {
    repeated Currency Currencies = 1;
}

service CurrenciesService {
    rpc GetCurrencies(CurrencyRequest) returns (CurrencyList);
}

// message Balance {
//     MoneyValue TotalAmount = 1;

// }